--- a/src/styles.css
+++ b/src/styles.css
@@ -24,12 +24,16 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 /*
  * Стили компонента App
  */
-.App {
+.app {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
@@ -39,7 +43,7 @@ img {
 /*
  * Стили компонента Searchbar
  */
-.Searchbar {
+.searchbar {
   top: 0;
   left: 0;
   position: sticky;
@@ -61,7 +65,7 @@ img {
 /*
  * Стили компонента SearchForm
  */
-.SearchForm {
+.searchForm {
   display: flex;
   align-items: center;
   width: 100%;
@@ -71,7 +75,7 @@ img {
   overflow: hidden;
 }
 
-.SearchForm-button {
+.searchForm-button {
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -86,11 +90,11 @@ img {
   outline: none;
 }
 
-.SearchForm-button:hover {
+.searchForm-button:hover {
   opacity: 1;
 }
 
-.SearchForm-button-label {
+.searchForm-button-label {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -102,7 +106,7 @@ img {
   border: 0;
 }
 
-.SearchForm-input {
+.searchForm-input {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -113,7 +117,7 @@ img {
   padding-right: 4px;
 }
 
-.SearchForm-input::placeholder {
+.searchForm-input::placeholder {
   font: inherit;
   font-size: 18px;
 }
@@ -121,7 +125,7 @@ img {
 /*
  * Стили компонента ImageGallery
  */
-.ImageGallery {
+.imageGallery {
   display: grid;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -137,20 +141,20 @@ img {
 /*
  * Стили компонента ImageGalleryItem
  */
-.ImageGalleryItem {
+.imageGalleryItem {
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-.ImageGalleryItem-image {
+.imageGalleryItem-image {
   width: 100%;
   height: 260px;
   object-fit: cover;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ImageGalleryItem-image:hover {
+.imageGalleryItem-image:hover {
   transform: scale(1.03);
   cursor: zoom-in;
 }
@@ -159,7 +163,7 @@ img {
  * Стили компонента Modal
  */
 
-.Overlay {
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -172,7 +176,7 @@ img {
   z-index: 1200;
 }
 
-.Modal {
+.modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
 }
@@ -180,7 +184,7 @@ img {
 /*
 * Стили компонента Buton (Load more)
 */
-.Button {
+.button {
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
@@ -201,7 +205,11 @@ img {
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
-.Button:hover,
-.Button:focus {
+.button:hover,
+.button:focus {
   background-color: #303f9f;
+}
+
+li {
+  list-style: none;
 }
