--- a/src/styles.css
+++ b/src/styles.css
@@ -20,16 +20,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+/* ul {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  gap: 10px;
-}
-
+  gap: 20px;
+} */
 /*
  * Стили компонента App
  */
@@ -37,7 +33,7 @@ img {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
-  padding-bottom: 24px;
+  /* padding-bottom: 24px; */
 }
 
 /*
@@ -212,4 +208,9 @@ img {
 
 li {
   list-style: none;
+}
+
+.loader {
+  margin: 0 auto;
+  padding-top: 200px;
 }
